WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
181926
Fetch Headers from an Opaque response should be filtered out
https://bugs.webkit.org/show_bug.cgi?id=181926
Summary
Fetch Headers from an Opaque response should be filtered out
youenn fablet
Reported
2018-01-22 00:44:03 PST
Fetch Headers from an Opaque response should be filtered out
Attachments
Patch
(12.63 KB, patch)
2018-01-22 01:49 PST
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Patch
(13.02 KB, patch)
2018-01-22 07:21 PST
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Patch
(13.02 KB, patch)
2018-01-22 07:28 PST
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews101 for mac-sierra
(2.16 MB, application/zip)
2018-01-22 08:35 PST
,
EWS Watchlist
no flags
Details
Patch
(13.08 KB, patch)
2018-01-22 08:46 PST
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews104 for mac-sierra-wk2
(2.57 MB, application/zip)
2018-01-22 09:56 PST
,
EWS Watchlist
no flags
Details
Show Obsolete
(5)
View All
Add attachment
proposed patch, testcase, etc.
youenn fablet
Comment 1
2018-01-22 01:49:04 PST
Created
attachment 331903
[details]
Patch
youenn fablet
Comment 2
2018-01-22 07:21:39 PST
Created
attachment 331923
[details]
Patch
Radar WebKit Bug Importer
Comment 3
2018-01-22 07:25:53 PST
<
rdar://problem/36732694
>
youenn fablet
Comment 4
2018-01-22 07:28:10 PST
Created
attachment 331924
[details]
Patch
EWS Watchlist
Comment 5
2018-01-22 08:35:02 PST
Comment on
attachment 331924
[details]
Patch
Attachment 331924
[details]
did not pass mac-ews (mac): Output:
http://webkit-queues.webkit.org/results/6169756
New failing tests: http/wpt/fetch/response-opaque-clone.html
EWS Watchlist
Comment 6
2018-01-22 08:35:03 PST
Created
attachment 331927
[details]
Archive of layout-test-results from ews101 for mac-sierra The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews101 Port: mac-sierra Platform: Mac OS X 10.12.6
youenn fablet
Comment 7
2018-01-22 08:46:13 PST
Created
attachment 331928
[details]
Patch
youenn fablet
Comment 8
2018-01-22 08:46:38 PST
(In reply to Build Bot from
comment #5
)
> Comment on
attachment 331924
[details]
> Patch > >
Attachment 331924
[details]
did not pass mac-ews (mac): > Output:
http://webkit-queues.webkit.org/results/6169756
> > New failing tests: > http/wpt/fetch/response-opaque-clone.html
WK1 does not support Cache API, updated test accordingly.
EWS Watchlist
Comment 9
2018-01-22 09:56:20 PST
Comment on
attachment 331928
[details]
Patch
Attachment 331928
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
http://webkit-queues.webkit.org/results/6170401
New failing tests: media/video-main-content-autoplay.html
EWS Watchlist
Comment 10
2018-01-22 09:56:22 PST
Created
attachment 331939
[details]
Archive of layout-test-results from ews104 for mac-sierra-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews104 Port: mac-sierra-wk2 Platform: Mac OS X 10.12.6
youenn fablet
Comment 11
2018-01-22 10:09:06 PST
(In reply to Build Bot from
comment #9
)
> Comment on
attachment 331928
[details]
> Patch > >
Attachment 331928
[details]
did not pass mac-wk2-ews (mac-wk2): > Output:
http://webkit-queues.webkit.org/results/6170401
> > New failing tests: > media/video-main-content-autoplay.html
I cannot reproduce the error locally and the crash is located in WebCore::RenderView. It started crashing in the flakiness dashboard recently so this is probably unrelated.
WebKit Commit Bot
Comment 12
2018-01-22 10:33:36 PST
Comment on
attachment 331928
[details]
Patch Clearing flags on attachment: 331928 Committed
r227339
: <
https://trac.webkit.org/changeset/227339
>
WebKit Commit Bot
Comment 13
2018-01-22 10:33:37 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug